# VaultGuard

./: .gitignore  CHANGELOG.md  LICENSE  package.json
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/src/: bridge.rs  clipboard.rs  export.rs  generator.rs  lib.rs  prefs.rs  totp.rs
src-tauri/src/autofill/: hotkey.rs  mod.rs  uia.rs
src-tauri/src/crypto/: aead.rs  error.rs  kdf.rs  mod.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/vault/: mod.rs  models.rs  repo.rs
src/components/: AutofillPicker.tsx  BridgeApprovals.tsx  ItemEditor.tsx  PasswordGenerator.tsx  SettingsModal.tsx  TotpBadge.tsx  VaultView.tsx
src/components/layout/: AppShell.tsx  ItemListPanel.tsx  NavSidebar.tsx
src/components/ui/: Button.tsx  CommandPalette.tsx  EmptyState.tsx  Field.tsx  Modal.tsx  Skeleton.tsx  Toast.tsx
src/contexts/: PrefsContext.tsx  ThemeContext.tsx  ToastContext.tsx
src/hooks/: useFavicon.ts  useHotkeys.ts  usePasswordStrength.ts
src/lib/: fuzzy.ts  ipc.ts  schemas.ts  useIdleLock.ts
src/styles/: base.css  tokens.css
src/styles/components/: layout.css
