[package]
name = "vaultguard"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vaultguard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
zeroize = "1.8.2"
rand = "0.8"
rusqlite = { version = "0.39.0", features = ["bundled"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6.1"
hex = "0.4.3"
base64 = "0.22.1"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
time = { version = "0.3.47", features = ["serde"] }
arboard = "3.6.1"
totp-rs = { version = "5.7.1", features = ["otpauth"] }
tauri-plugin-dialog = "2.7.0"
tiny_http = "0.12.0"
tokio = { version = "1.52.0", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }
url = "2.5.8"
psl = "0.5"

[target.'cfg(windows)'.dependencies]
global-hotkey = "0.7"
uiautomation = "0.20"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"] }

# Release profile — size + speed + hardening.
# - LTO removes dead code (smaller binary, fewer crypto leftovers in memory image).
# - `panic = "abort"` prevents unwinding through crypto code, which could leave
#   partially-zeroized buffers on the stack.
# - `strip = "symbols"` drops debug symbols from the shipped binary.
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"
incremental = false
overflow-checks = true

